--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -137,3 +138,8 @@ wandb/
 diagramas_img/
 nohup.out
 config.json.save
+
+#image files
+*.png
+*.jpeg
+*.jpg
