--- a/config.json
+++ b/config.json
@@ -6,12 +6,12 @@
             "enc_nhead": 4,
             "enc_dff":128,
             "enc_n_layers":6,
-            "enc_dropout":0
+            "enc_dropout":0.1
         },
         "rnn":{
             "enc_hsize": 128,
             "enc_n_layers": 4,
-            "enc_dropout": 0
+            "enc_dropout": 0.05
         }
     },
     "rel_hparams":{
@@ -19,7 +19,7 @@
         "rel_nhead":4,
         "rel_dff":256,
         "rel_n_layers":6,
-        "rel_dropout":0,
+        "rel_dropout":0.05,
         "rel_gmm_num_components":10
     },
     "dec_hparams":{
@@ -31,7 +31,7 @@
             "dec_hsize": 128,
             "dec_n_layers": 6,
             "dec_dim_layer": 256,
-            "dec_dropout": 0,
+            "dec_dropout": 0.05,
             "dec_gmm_num_components":20
         }
     },
@@ -41,13 +41,13 @@
         "end_positions": false
     },
     "training_params":{
-        "input_type": "random",
-        "replace_padding": true,
+        "input_type": "order",
+        "replace_padding": false,
         "stop_predictive_grad": true,
         "num_epochs":150,
         "lr_ae":1e-3,
-        "lr_pos_pred":1e-4,
-        "lr_emb_pred":1e-4
+        "lr_pos_pred":1e-3,
+        "lr_emb_pred":1e-3
     },
     "general_config":{
         "use_gpu": true,
@@ -56,7 +56,7 @@
         "diagrams_img_path":"diagramas_img/",
         "train_dataset_path":"/data/ajimenez/cose/train/",
         "validation_dataset_path":"/data/ajimenez/cose/valid/",
-        "num_backups":75,
+        "num_backups":30,
         "model_path":"weights/",
         "save_weights":true,
         "stats_path": "/data/jcabrera/didi_wo_text/didi_wo_text-stats-origin_abs_pos.json"
