--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ pesos_descargados/
 #user files
 Alex_pruebas.ipynb
 Alex_train_step.ipynb
+Alex_qual_eval.ipynb
+Alex_eval_.ipynb
+Alex_eval_raw.ipynb
