--- a/.gitignore
+++ b/.gitignore
@@ -151,8 +151,8 @@ pesos_descargados/
 *.save
 *.out
 #user files
-Alex_pruebas.ipynb
-Alex_train_step.ipynb
-Alex_qual_eval.ipynb
-Alex_eval_.ipynb
-Alex_eval_raw.ipynb
+Alex_eval_*
+Alex_eval_raw*
+Alex_pruebas*
+Alex_train_step*
+Alex_sum_eval*
