eval_model updated: now working

--- a/config.json
+++ b/config.json
@@ -44,7 +44,7 @@
         "input_type": "order",
         "replace_padding": false,
         "stop_predictive_grad": true,
-        "num_epochs":150,
+        "num_epochs":2,
         "lr_ae":1e-3,
         "lr_pos_pred":1e-3,
         "lr_emb_pred":1e-3
@@ -56,7 +56,8 @@
         "diagrams_img_path":"diagramas_img/",
         "train_dataset_path":"/data/ajimenez/cose/train/",
         "validation_dataset_path":"/data/ajimenez/cose/valid/",
-        "num_backups":30,
+        "test_dataset_path": "/data/ajimenez/cose/test/",
+        "num_backups":2,
         "model_path":"weights/",
         "save_weights":true,
         "stats_path": "/data/jcabrera/didi_wo_text/didi_wo_text-stats-origin_abs_pos.json"
